# Qming-Quant

./: .env.example  .gitignore  PROJECT_DESIGN.md  README.md  STRATEGY_RESEARCH.md  pyproject.toml
app/: cli_parsing.py  config.py  live_readiness.py  live_services.py  main.py  phase1_cli.py  run_log.py  serialization.py  services.py
backtest/: engine.py  reporting.py
core/: models.py
execution/: order_factory.py  order_manager.py  position_manager.py  reconciliation.py
live/: __init__.py  bot.py  execution.py  fill_sync.py  market_data_guard.py  reconcile.py  risk.py  state.py  strategy_dry_run.py  sync.py  trading_gate.py
market_data/: candle_sync.py  candles.py  data_gate.py
paper/: broker.py  engine.py
risk/: manager.py  symbol_lease.py
scripts/: config_check.py  data_quality_check.py  generate_architecture_figure.py  live_bot_once_check.py  local_acceptance_check.py  phase1_place_cancel_check.py  phase2_basic_strategy_loop_check.py  phase3_risk_controls_check.py  phase4_monitoring_check.py  prelive_order_check.py
simulation/: broker.py  engine.py
storage/: db.py  live_intent_repository.py  live_repository.py  repositories.py  safety_repository.py  trade_repository.py
strategies/: base.py  factory.py  runner.py
tests/: cli_fakes.py  fakes.py  test_app_config.py  test_app_config_cli.py  test_channel_breakout_strategy.py  test_cli_live_ops.py  test_cli_live_strategy_dry_run.py  test_cli_market_data.py  test_cli_operator.py  test_cli_parser.py  test_cli_research.py  test_cli_simulated_execution.py  test_cli_small_live_pilot.py  test_core_models.py  (+29 more)
(+15 files in other folders)
